{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 49,
  "lineage": "a9d4b2e9-abbb-66c8-5582-5f9e4d82ecd1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ajay_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:355618576258:internet-gateway/igw-0f1e1c2f0cbb5a083",
            "id": "igw-0f1e1c2f0cbb5a083",
            "owner_id": "355618576258",
            "tags": {
              "Name": "ajay_infra"
            },
            "tags_all": {
              "Name": "ajay_infra"
            },
            "vpc_id": "vpc-0b29028eef69d46f0"
          },
          "dependencies": [
            "aws_vpc.infra_ajay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "IGW_ajay",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f1e1c2f0cbb5a083",
            "id": "r-rtb-09edf4a136ad7ee591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09edf4a136ad7ee59",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ajay_IGW",
            "aws_route_table.RT_ajay",
            "aws_vpc.infra_ajay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT_ajay",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:355618576258:route-table/rtb-09edf4a136ad7ee59",
            "id": "rtb-09edf4a136ad7ee59",
            "owner_id": "355618576258",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "infra_ajay_route_table"
            },
            "tags_all": {
              "Name": "infra_ajay_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b29028eef69d46f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.infra_ajay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:355618576258:subnet/subnet-06566b07f3f9998aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.160.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06566b07f3f9998aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355618576258",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_ajay"
            },
            "tags_all": {
              "Name": "private_subnet_ajay"
            },
            "vpc_id": "vpc-0b29028eef69d46f0"
          },
          "dependencies": [
            "aws_vpc.infra_ajay",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:355618576258:subnet/subnet-0286f93e74db5a28c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.160.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0286f93e74db5a28c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "355618576258",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_ajay"
            },
            "tags_all": {
              "Name": "public_subnet_ajay"
            },
            "vpc_id": "vpc-0b29028eef69d46f0"
          },
          "dependencies": [
            "aws_vpc.infra_ajay",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "infra_ajay",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:355618576258:vpc/vpc-0b29028eef69d46f0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.160.0.0/16",
            "default_network_acl_id": "acl-045bb97d46f8032c2",
            "default_route_table_id": "rtb-06414128ee0641313",
            "default_security_group_id": "sg-0235c32a08c8f57ee",
            "dhcp_options_id": "dopt-07cf799247c8fee56",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b29028eef69d46f0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06414128ee0641313",
            "owner_id": "355618576258",
            "tags": {
              "Name": "ajay_infra"
            },
            "tags_all": {
              "Name": "ajay_infra"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}